cargo-features = ["panic-immediate-abort"]

[package]
name = "ntsc-rs-web-wrapper"
version = "0.1.0"
authors = ["valadaptive"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
fast_image_resize = { version = "5.4", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.83", features = ["console"] }
ntsc-rs = { git = "https://github.com/ntsc-rs/ntsc-rs", default-features = false }
sval = { version = "2.14.1", features = ["std"] }
sval_json = { version = "2.14.1", features = ["std"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
#panic = "immediate-abort"
lto = "thin"

[profile.release-relaxed-simd]
inherits = "release"
